# meles

./: .gitignore  README.md  pyproject.toml
src/meles/: __main__.py  app.py  default.py  wsgi.py
src/meles/_res/: .gitattributes  favicon.url
src/meles/core/: __init__.py  _color.py  _config.py  _connect.py  _context.py  _data.py  _error.py  _falcon.py  _generator.py  _icons.py  _log.py  _url.py
src/meles/family/: __init__.py  base.py  custom.py  nuget.py  shield.py
src/meles/resources/: __init__.py  base.py  common.py  custom.py  nuget.py  shield.py
src/meles/sources/: __init__.py  base.py  nuget.py
src/meles/sources/custom/: base.py
tests/: __init__.py  conftest.py
tests/_mocks/: __init__.py
tests/resources/common/: health_disabled_test.py  health_enabled_test.py  prometheus_disabled_test.py  prometheus_enabled_test.py  routes_test.py  system_test.py
