[project]
name = "meles"
version = "0.4.0-alpha1"
description = "Meles (the zoologic family of badgers is a simple service to create and host bages for your software projects"
authors = [
    {name = "Carsten Igel", email = "cig@bite-that-bit.de"},
]
dependencies = [
    "pybadges>=3.0.1",
    "urllib3>=2.2.2",
    "falcon>=3.1.3",
    "semver>=3.0.2",
    "setuptools>=70.1.0",
    "simpleicons>=7.21.0",
    "certifi>=2024.6.2",
    "falcon-caching>=1.1.0",
    "jsonpath>=0.82.2",
    "pyyaml>=6.0.1",
    "falcon-prometheus>=0.1.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "AGPL-3.0"}

[project.urls]
Homepage = "https://github.com/carstencodes/meles"
Repository = "https://github.com/carstencodes/meles.git"
Documentation = "https://github.com/carstencodes/meles/blob/main/docs/ReadMe.md"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.build]
excludes = [ "**/favicon.png", "**/favicon.url" ]

[tool.pdm.dev-dependencies]
linting = [
    "mypy>=1.10.1",
    "types-urllib3>=1.26.25.14",
    "types-pyyaml>=6.0.12.20240311",
]
unit-test = [
    "pytest>=8.2.2",
    "coverage>=7.5.4",
    "tox>=4.15.1",
    "tox-pdm>=0.7.2",
    "pytest-cov>=5.0.0",
    "pytest-falcon>=0.4.2",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
junit_suite_name = "meles"
pythonpath = [
    "src",
]
minversion = "7.0.0"
addopts = [
    "--cache-clear",
    "--junit-xml",
    "pytest.result.xml",
    "--cov=src",
    "--cov-branch",
    "--cov-report",
    "xml:pytest.coverage.xml",
    "--cov-report",
    "term",
]
filterwarnings = [
    "ignore::DeprecationWarning ",
]